--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 bleach==1.5.0
 dj-database-url==0.4.1
 dj-static==0.0.6
-Django==1.10.4
+Django==1.10.6
+django-debug-toolbar==1.7
 django-realtime==1.1
 gunicorn==19.6.0
 html5lib==0.9999999
@@ -9,10 +10,10 @@ Markdown==2.6.7
 mysqlclient==1.3.9
 numpy==1.12.0
 Pillow==3.4.2
-psycopg2==2.7
 python-decouple==3.0
 pytz==2016.10
 six==1.10.0
+sqlparse==0.2.3
 static3==0.7.0
 Unipath==1.1
 whitenoise==3.2.2
