--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.3.1
 bleach==1.5.0
 dj-database-url==0.4.1
 dj-static==0.0.6
@@ -16,5 +17,6 @@ pytz==2016.10
 six==1.10.0
 sqlparse==0.2.3
 static3==0.7.0
+tzlocal==1.3
 Unipath==1.1
 whitenoise==3.2.2
