--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ psycopg2==2.7
 python-dateutil==2.6.0
 python-decouple==3.0
 pytz==2016.10
+schedule==0.4.2
 simplejson==3.10.0
 six==1.10.0
 sqlparse==0.2.3
